# libdwengo

./: Makefile.in  configure.ac
old_auto/: Makefile.in
old_auto/src/: Makefile.in
src/: Makefile.am  Makefile.in  dwengoLCD.h
